kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mortis-grimreaper-deployment
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mortis-grimreaper
  template:
    metadata:
      labels:
        app: mortis-grimreaper
    spec:
      containers:
        - name: mortis-grimreaper
          image: grimreapermortis/mortis-grimreaper:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
