kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mortis-grimreaper-service
  namespace: demo
spec:
  selector:
    app: mortis-grimreaper
  ports:
    - port: 8008
      targetPort: 8000
  type: LoadBalancer
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: front-redis-service
#   namespace: demo
#   labels:
#     app: front-redis
#     role: master
# spec:
#   selector:
#     app: front-redis
#     role: master
#   ports:
#     - port: 8379
#       targetPort: 6379
