kubernetes/ingress.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: web-ingress
#   namespace: demo
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
#     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
# spec:
#   tls:
#     - hosts:
#         - mortis-grimreaper.ddns.net
#       secretName: mortis-tls
#   rules:
#     - host: mortis-grimreaper.ddns.net
#       http:
#         paths:
#           - backend:
#               serviceName: web-service
#               servicePort: 8008
#             path: /v2/projects

apiVersion: networking.k8s.io/v1                                                                                                      
kind: Ingress                                                                                                                         
metadata:                                                                                                                             
  name: mortis-grimreaper-ingress                                                                                                                   
  namespace: demo                                                                                                                 
spec:                                                                                                                                 
  ingressClassName: nginx                                                                                                             
  tls:                                                                                                                                
  - hosts:                                                                                                                            
    - "192.168.0.106"                                                                                                                 
  rules:                                                                                                                              
    - http:                                                                                                                           
        paths:
          - pathType: Prefix
            path: /projects
            backend:
              service:
                name: mortis-grimreaper-service 
                port:
                  number: 8008

          # - pathType: Prefix
          #   path: /
          #   backend:
          #     service:
          #       name: mortis-grimreaper-service 
          #       port:
          #         number: 800
